# BFO_CLI-reading-list

./: CMakeLists.txt
src/: main.c
src/IO/: input.c  input.h  read_configurations.c  read_configurations.h
src/book/: book_opener.c  book_opener.h  reading_list.c  reading_list.h
src/menu/: start_menu.c  start_menu.h
src/terminal_IO/: read_keys.c  read_keys.h
src/terminal_UI/: basic_structs.c  basic_structs.h  menus.c  menus.h  tables.c  tables.h
src/terminal_UI/input/: input_line.c  input_line.h
src/terminal_UI/layout/: base_containers.c  base_containers.h  row_layout.c  row_layout.h
src/terminal_UI/menus/: char_menu.c  char_menu.h  table_selection_menu.c  table_selection_menu.h
